fix whitebar in final distribution on iphone

--- a/public/components/shell/shell.css
+++ b/public/components/shell/shell.css
@@ -66,7 +66,23 @@
     padding-top: 0vh;
 }
 
-.shellContentFit {
-    height: 80%;
-    padding-top: 10vh;
+@media (orientation: portrait) {
+    .shellContentFit {
+        height: 80%;
+        padding-top: 9vh;
+    }
+}
+
+@media (orientation: landscape) {
+    .shellContentFit {
+        height: 80%;
+        padding-top: 8vh;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .shellContentFit {
+        height: 80%;
+        padding-top: 10vh;
+    }
 }
